Update with JC comments

--- a/RegionalText/2022/CC/DataCollectionPrograms.tex
+++ b/RegionalText/2022/CC/DataCollectionPrograms.tex
@@ -21,7 +21,7 @@ Two dive charter vessels operated in the CC:
 
 \end{itemize}
 
-Five gillnet sounding vessels were operated by the Heiltsuk Nation this season;
-most effort was focused in Statistical Area 07,
-as well as effort in Statistical Area 08
-to assist in locating fish for spawn-on-kelp (SOK) operations.
+Heiltsuk and Kitasoo Nations collected
+15 nearshore cast net herring samples in 2022.
+Additional spawn reconnaissance for Area 08
+was conducted by the Wuikinuxv Fisheries Program.
