--- a/RegionalText/2022/PRD/DataCollectionPrograms.tex
+++ b/RegionalText/2022/PRD/DataCollectionPrograms.tex
@@ -17,5 +17,5 @@ The dive charter vessel \boat{Royal Pride} surveyed spawn for 20 days
 from March \nth{30} to April \nth{18}.
 Herring spawn locations were primarily identified with fixed-wing overflights.
 Two spawn flights were conducted this season on March \nth{30} and April \nth{5}.
-All three charter vessels were funded by DFO,
-through a contract to the Herring Conservation Research Society.
+Additional on-grounds spawn observations were provided by
+Lax Kw'alaams Band and Metlakatla First Nation.
