--- a/RegionalText/2022/PRD/GeneralObservations.tex
+++ b/RegionalText/2022/PRD/GeneralObservations.tex
@@ -12,7 +12,8 @@ behaving in a manner which has not been observed in recent years.
 \item Kelp was more abundant from Tree Bluff south to Duncan Bay. 
 
 \item Overall spawn was more intense over two days and was protracted.
-Spawning occurred slowly over the season opposed to the warmer sea temperatures with a short spawn and quick hatch out.
+Spawning occurred slowly over the season
+opposed to the warmer sea temperatures with a short spawn and quick hatch out.
 
 \item Herring were large and healthy.
 
@@ -26,15 +27,18 @@ Spawning occurred slowly over the season opposed to the warmer sea temperatures 
 
 \begin{itemize}
 
-\item Water temperature was colder than recent years but warmer than Big Bay (about 6$^\circ\text{C}$).
+\item Water temperature was colder than recent years but warmer than Area 4
+(about 6$^\circ\text{C}$).
 
-\item Significant and consistent storm activity over the duration of the test fishery and dive survey.
+\item Significant and consistent storm activity
+over the duration of the test fishery and dive survey.
 
-\item Large schools observed in the inlet and tended to congregate in large schools
-close to the bottom and the beaches.
+\item Large schools observed in the inlet and tended to congregate
+in large schools close to the bottom and the beaches.
 Fish appeared longer and larger in the test sets than in recent years.
 
-\item There was an observed increase in sea lion abundance and activity throughout the area.
+\item There was an observed increase in sea lion abundance and activity
+throughout the area.
 
 \item Spawn appeared to commence at the end of March and was distributed
 throughout the inlet and along the outside from Cape George towards Oval Point.
