--- a/RegionalText/2022/WCVI/GeneralObservations.tex
+++ b/RegionalText/2022/WCVI/GeneralObservations.tex
@@ -9,9 +9,10 @@ in Hotsprings Cove, and in front of Tofino.
 \item Good communication and observations by First Nation charters
 helped with a successful spawn survey this year.
 
-\item Like last year, there was a long spawn in Hesquiat Harbour.
+\item Like last year, there was a large spawn in Hesquiat Harbour
+that persisted for several days.
 
-\item There was a later spawn in Barkley Sound that was fairly long.
+\item There was a later spawn in Barkley Sound that covered a lot of shoreline.
 
 \item In Area 25 especially, early spawn timing may have limited test boat access.
 As well, the fish seemed to be close to the beach and ready to spawn but
