--- a/Document/Variables.rnw
+++ b/Document/Variables.rnw
@@ -51,8 +51,9 @@
 \newcommand{\plusGroup}{The age-\Sexpr{max(ageRange)} class is a `plus group' which includes fish ages \Sexpr{max(ageRange)} and older.}
 \newcommand{\spawnIndex}{The `spawn index' is not scaled by the spawn survey scaling parameter, $q$.}
 \newcommand{\trendLine}{The thick black line is a \Sexpr{smLine} curve, and the shaded area is the \Sexpr{ciLevel*100}\% confidence interval.}
-\newcommand{\qPeriods}{The spawn index has two distinct periods defined by the dominant survey method: surface surveys (\Sexpr{qYrs$q1}), and dive surveys (\Sexpr{qYrs$q2}).}
+\newcommand{\qPeriods}{The spawn index has two distinct periods defined by the dominant coastwide survey method: surface surveys (\Sexpr{qYrs$q1}), and dive surveys (\Sexpr{qYrs$q2}).}
 \newcommand{\legendNear}{Legend: `Nearshore' refers to samples collected using cast nets as part of a pilot study with First Nations.}
+\newcommand{\noteNear}{Note: Nearshore samples are not used in stock assessments.}
 \newcommand{\legendGear}{Legend: `Other' represents the reduction (\Sexpr{min(yrRange)} to \Sexpr{lastRedYr} only), the food and bait, as well as the special use fishery; `RoeSN' represents the roe seine fishery; and `RoeGN' represents the roe gillnet fishery.}
 \newcommand{\darkThisYr}{The year \thisYr{} has a darker bar to facilitate interpretation.}
 \newcommand{\withPrivacy}[1]{Note: data may be withheld due to privacy concerns (#1).}
