--- a/RegionalText/2022/SoG/GeneralObservations.tex
+++ b/RegionalText/2022/SoG/GeneralObservations.tex
@@ -3,8 +3,8 @@
 \item Late February, as well as early and mid-March had strong winds
 which impacted the effectiveness of the assessment program.
 
-\item Spawn in the Strait of Georgia was observed
-along the East coast of Vancouver Island from Kitty Coleman south to Union Point,
+\item Spawn in the Strait of Georgia was observed along
+the East coast of Vancouver Island from Kitty Coleman south to Union Point,
 on the East coast of Denman Island from White Spit to Komas Bluff,
 around most of Hornby Island,
 and from Bowser to the Little Qualicum River.
@@ -19,15 +19,18 @@ at Lock Bay on Gabriola and at Round Island south of Dodd Narrows.
 \item Spawn recorded at Kiddie Point and Blubber Bay
 on Texada Island (first records at these locations).
 
-\item Overall fishery timing was average for 2022.
-
 \item The majority of spawning occurred between March \nth{2} and \nth{7}
 after multiple days of high winds and rough seas.
 
 \item The overall length of spawn observed during the flight program
 was below average when compared with recent years.
 
-\item The sea lion population in the Strait of Georgia during the herring season
-continues to impact the ability to obtain biological samples in some areas and times.
+\item Streamkeepers installed spawning panels in False Creek again this year.
+
+\item Overall fishery timing was average this year.
+
+\item The sea lion population in the Strait of Georgia
+during the herring season continues to impact the ability
+to obtain biological samples in some areas and times.
 
 \end{itemize}
