--- a/RegionalText/Templates/GeneralObservations.tex
+++ b/RegionalText/Templates/GeneralObservations.tex
@@ -1,3 +1,3 @@
 \begin{itemize}
-\item No observations for \thisYr{}.
+\item No observations were available at the time of distribution.
 \end{itemize}
