--- a/DataSummary.rnw
+++ b/DataSummary.rnw
@@ -661,7 +661,7 @@ Note that spawn size and intensity varies; therefore the number of spawns is not
 
 \begin{figure}[ht]
 \centering
-\includegraphics[width=0.95\linewidth]{SpawnIndexPercent.png}
+\includegraphics[width=\linewidth]{SpawnIndexPercent.png}
 \caption{Time series of spawn index in thousands of metric tonnes ($\text{t} \times 10^{3}$) for \fishName{} from \Sexpr{min(yrRange)} to \thisYr{} in the \regionName{} \regionType{} stock assessment region (SAR; panel a), as well as percent contributed by \Sexpr{spawnIndexGroupName$b}, and Section (b, \& c, respectively). 
 %\trendLine{}
 \qPeriods{}
