--- a/DataSummary.rnw
+++ b/DataSummary.rnw
@@ -109,44 +109,90 @@ whereas roe fisheries typically target spawning fish between February and April.
 
 % Bring in custom text for catch and biological samples
 \inputsp{\Sexpr{noquote(docPath)}CatchAndBiologicalSamples.tex}
-Landed commercial catch of \fishName{} by year and fishery is shown in \autoref{tabCatchCommUseYr} and \autoref{figCatchGear}.
-\iftoggle{catchStatArea}{In addition to annual catch variability, catch varies among Statistical Areas (\autoref{figCatchStatArea}).}{\unskip}
-Total harvested spawn-on-kelp (SOK) in \thisYr{} in the \regionName{} \regionType{} SAR is shown in \autoref{tabHarvestSOK}; we also calculate the estimated spawning biomass associated with SOK harvest.
+Landed commercial catch of \fishName{} by year and fishery is shown in
+\autoref{tabCatchCommUseYr} and \autoref{figCatchGear}.
+\iftoggle{catchStatArea}{In addition to annual catch variability,
+catch varies among Statistical Areas (\autoref{figCatchStatArea}).}{\unskip}
+Total harvested spawn-on-kelp (SOK) in \thisYr{} in the \regionName{}
+\regionType{} SAR is shown in \autoref{tabHarvestSOK};
+we also calculate the estimated spawning biomass associated with SOK harvest.
 \spawnIndexTechReport{}
 % Note that we do not account for SOK harvest removals in stock assessments. OR
 % Currently, catch input to the stock assessment model does not include mortality from the commercial SOK fishery, nor any recreational or FSC fisheries.
 
-In \thisYr{}, \Sexpr{nSampThisYr} \fishName{} biological samples were collected and processed for the \regionName{} \regionType{} SAR (\autoref{tabBioNum}, \autoref{tabBioTypeNum}).
-\iftoggle{numPropWtAge}{Differences between biological data collected from two sampling protocols regarding the number-, proportion-, weight-, and length-at-age for \fishName{} in \thisYr{} in the \regionName{} \regionType{} SAR are shown in \autoref{tabDeltaNumAgeYr}, \autoref{tabDeltaPropAgeYr}, \autoref{tabDeltaWtAgeYr}, and \autoref{tabDeltaLenAgeYr}, respectively.
-The nearshore sampling program is a multi-year pilot study (using cast nets), therefore only biological data from the seine samples were used for the purposes of stock assessment.
-Summaries of data collected by the nearshore sampling program are shown in \autoref{tabNearNum}, \autoref{tabNearProp}, \autoref{tabNearWt}, and \autoref{tabNearLen}.
-In addition, \autoref{figLengthAgeSample} and \autoref{figLengthAgeSampleSA} show differences in length-at-age between the two sampling protocols, and differences by Statistical Area, respectively.}{\unskip}
-\iftoggle{biosamples}{The locations in which the biological samples were collected are presented in \autoref{figBioLocations}.}{\unskip}
-\iftoggle{weightCatch}{Biological samples collected using seine gear shows that there is considerable variability in fish weight by year and sample type (\autoref{figWeightCatch}).}{\unskip}
-Included herein are biological summaries of observed proportion-, number-, weight-, and length-at-age (\autoref{figProportionAged}, \autoref{tabPropAgedYearTab}, and \autoref{figWtLenAge}, respectively).
-\iftoggle{major}{We also show the percent change in weight and length for age-\Sexpr{ageShow} and age-\Sexpr{ageShow2} fish (\autoref{figWtLenAgeChange} \& \autoref{figWtLenAgeChange2}, respectively).}{\unskip}
-\iftoggle{weightGroup}{Some Statistical Areas tend to have larger fish at a given age (\autoref{figWeightAgeGroup}, \autoref{tabWeightAgeGroupN}).}{\unskip}
+In \thisYr{}, \Sexpr{nSampThisYr} \fishName{} biological samples were
+collected and processed for the \regionName{} \regionType{} SAR
+(\autoref{tabBioNum}, \autoref{tabBioTypeNum}).
+\iftoggle{numPropWtAge}{Differences between biological data collected
+from two sampling protocols regarding the number-, proportion-, weight-, and
+length-at-age for \fishName{} in \thisYr{} in the \regionName{} \regionType{}
+SAR are shown in \autoref{tabDeltaNumAgeYr}, \autoref{tabDeltaPropAgeYr},
+\autoref{tabDeltaWtAgeYr}, and \autoref{tabDeltaLenAgeYr}, respectively.
+The nearshore sampling program is a multi-year pilot study (using cast nets),
+therefore only biological data from the seine samples
+were used for the purposes of stock assessment.
+Summaries of data collected by the nearshore sampling program are shown in
+\autoref{tabNearNum}, \autoref{tabNearProp}, \autoref{tabNearWt}, and
+\autoref{tabNearLen}.
+In addition, \autoref{figLengthAgeSample} and \autoref{figLengthAgeSampleSA}
+show differences in length-at-age between the two sampling protocols, and
+differences by Statistical Area, respectively.}{\unskip}
+\iftoggle{biosamples}{The locations in which the biological samples were
+collected are presented in \autoref{figBioLocations}.}{\unskip}
+\iftoggle{weightCatch}{Biological samples collected using seine gear shows that
+there is considerable variability in fish weight by year and sample type
+(\autoref{figWeightCatch}).}{\unskip}
+Included herein are biological summaries of observed
+proportion-, number-, weight-, and length-at-age
+(\autoref{figProportionAged}, \autoref{tabPropAgedYearTab}, and
+\autoref{figWtLenAge}, respectively).
+\iftoggle{major}{We also show the percent change in weight and length
+for age-\Sexpr{ageShow} and age-\Sexpr{ageShow2} fish
+(\autoref{figWtLenAgeChange} \& \autoref{figWtLenAgeChange2},
+respectively).}{\unskip}
+\iftoggle{weightGroup}{Some Statistical Areas tend to have larger fish at a
+given age (\autoref{figWeightAgeGroup}, \autoref{tabWeightAgeGroupN}).}{\unskip}
 \seineSamples{}
 \repSamples{}
 
 % Spawn survey data section
 \section{Spawn survey data}
 
-\iftoggle{spawnByLoc}{\fishName{} spawn surveys were conducted at \Sexpr{nSpawnLoc} individual location\Sexpr{ifelse(nSpawnLoc>1, "s", "")} in \thisYr{} in the \regionName{} \regionType{} SAR (\autoref{tabSpawnByLoc}\iftoggle{spawnByLocXY}{, and \autoref{figSpawnByLoc}}{\unskip}).}
-{No spawn surveys were conducted in \thisYr{} in the \regionName{} \regionType{} SAR.}
-A summary of spawn from the last decade (\Sexpr{unique(spawnDecade$Decade)}) is shown in \autoref{figSpawnDecade}.
-\autoref{figSpawnTiming} shows spawn start date by decade and \Sexpr{ifelse(spawnTimingGroup, "Group", "Statistical Area")}.
-Spawn surveys are conducted to estimate the spawn length, width, number of egg layers, and substrate type, and these data are used to estimate the index of spawning biomass (i.e., the spawn index; \autoref{figSpawnIndexType}, \autoref{figSpawnTypeProp}, \autoref{figSpawnDimensions}, \autoref{figSpawnIndexPercent}, \autoref{tabSpawnYrTab}, and \autoref{figSpawnIndexChange}).
+\iftoggle{spawnByLoc}{\fishName{} spawn surveys were conducted at
+\Sexpr{nSpawnLoc} individual location\Sexpr{ifelse(nSpawnLoc>1, "s", "")} in
+\thisYr{} in the \regionName{} \regionType{} SAR
+(\autoref{tabSpawnByLoc}\iftoggle{spawnByLocXY}{, and
+\autoref{figSpawnByLoc}}{\unskip}).}
+{No spawn surveys were conducted in \thisYr{} in the \regionName{} \regionType{}
+SAR.}
+A summary of spawn from the last decade (\Sexpr{unique(spawnDecade$Decade)})
+is shown in \autoref{figSpawnDecade}.
+\autoref{figSpawnTiming} shows spawn start date by decade and
+\Sexpr{ifelse(spawnTimingGroup, "Group", "Statistical Area")}.
+Spawn surveys are conducted to estimate the spawn length, width,
+number of egg layers, and substrate type, and these data are used
+to estimate the index of spawning biomass
+(i.e., the spawn index; \autoref{figSpawnIndexType}, \autoref{figSpawnTypeProp},
+\autoref{figSpawnDimensions}, \autoref{figSpawnIndexPercent},
+\autoref{tabSpawnYrTab}, and \autoref{figSpawnIndexChange}).
 \spawnIndexTechReport{}
-\iftoggle{spawnDepth}{In addition, spawn surveys estimate spawn depth by Statistical Area, and Section (\autoref{figSpawnDepth}).}{\unskip}
+\iftoggle{spawnDepth}{In addition, spawn surveys estimate spawn depth
+by Statistical Area, and Section (\autoref{figSpawnDepth}).}{\unskip}
 \spawnIndex{}
-Therefore, these data do not represent model estimates of spawning biomass, and are considered the minimum observed spawning biomass derived from egg counts.
+Therefore, these data do not represent model estimates of spawning biomass,
+and are considered the minimum observed spawning biomass derived from egg counts.
 \qPeriods{}
 
-Some \fishName{} Sections contribute more than others to the total spawn index, and the percentage contributed by Section varies yearly (\autoref{figSpawnIndexPercent}b, \autoref{figSpawnPercentPanel}). 
-For example, in \thisYr{}, Section \Sexpr{pSpawnThisYr$Section} contributed the most to the spawn index (\Sexpr{pSpawnThisYr$Percent}\%). 
-As with Sections, some \Sexpr{spawnIndexGroupName$a}s contribute more than others to the total spawn index (\autoref{figSpawnIndexPercent}c, \autoref{figSpawnPercentGrid}).
-An animation shows the spawn index by spawn survey location from \Sexpr{min(yrRange)} to \thisYr{} (\autoref{figSpawnIndexAnimation}).
+Some \fishName{} Sections contribute more than others to the total spawn index,
+and the percentage contributed by Section varies yearly
+(\autoref{figSpawnIndexPercent}b, \autoref{figSpawnPercentPanel}). 
+For example, in \thisYr{}, Section \Sexpr{pSpawnThisYr$Section} contributed
+the most to the spawn index (\Sexpr{pSpawnThisYr$Percent}\%). 
+As with Sections, some \Sexpr{spawnIndexGroupName$a}s contribute more
+than others to the total spawn index
+(\autoref{figSpawnIndexPercent}c, \autoref{figSpawnPercentGrid}).
+An animation shows the spawn index by spawn survey location
+from \Sexpr{min(yrRange)} to \thisYr{} (\autoref{figSpawnIndexAnimation}).
 
 % General observations section
 \section{General observations}
@@ -199,7 +245,9 @@ and DFO Science staff:
 
 \begin{table}[ht]
 \centering
-\caption{Total landed commercial catch of \fishName{} in metric tonnes (t) by gear type in \thisYr{} in the \regionName{} \regionType{} stock assessment region (SAR).
+\caption{Total landed commercial catch of \fishName{} in metric tonnes (t)
+by gear type in \thisYr{} in the \regionName{} \regionType{}
+stock assessment region (SAR).
 \legendGear{}
 \noSOK{}
 \withPrivacy{WP}}
@@ -212,7 +260,10 @@ and DFO Science staff:
 
 \begin{table}[ht]
 \centering
-\caption{Total harvested \fishName{} spawn-on-kelp (SOK) in pounds (lb), and the associated estimate of spawning biomass in metric tonnes (t) from \Sexpr{firstYrTab} to \thisYr{} in the \regionName{} \regionType{} stock assessment region (SAR).
+\caption{Total harvested \fishName{} spawn-on-kelp (SOK) in pounds (lb), and
+the associated estimate of spawning biomass in metric tonnes (t)
+from \Sexpr{firstYrTab} to \thisYr{}
+in the \regionName{} \regionType{} stock assessment region (SAR).
 \spawnIndexTechReport{}
 \Sexpr{ifelse(region=="CC", "Harvest does not include the 2,411 lbs of spawn on egregia in 2018.", "%")}
 \withPrivacy{WP}}
@@ -225,7 +276,9 @@ and DFO Science staff:
 
 \begin{table}[ht]
 \centering
-\caption{Number of \fishName{} biological samples processed from \Sexpr{firstYrTab} to \thisYr{} in the \regionName{} \regionType{} stock assessment region (SAR).
+\caption{Number of \fishName{} biological samples processed
+from \Sexpr{firstYrTab} to \thisYr{} in the
+\regionName{} \regionType{} stock assessment region (SAR).
 \sampleSize{}
 \noteNear{}}
 \begin{tabular}{rrrrr}
@@ -239,7 +292,8 @@ and DFO Science staff:
 
 \begin{table}[ht]
 \centering
-\caption{Number and type of \fishName{} biological samples processed in \thisYr{} in the \regionName{} \regionType{} stock assessment region (SAR). 
+\caption{Number and type of \fishName{} biological samples processed
+in \thisYr{} in the \regionName{} \regionType{} stock assessment region (SAR). 
 \sampleSize{}} 
 \begin{tabular}{lllr}
 \toprule
@@ -251,7 +305,8 @@ and DFO Science staff:
 \iftoggle{numPropWtAge}{
 \begin{table}[ht]
 \centering
-\caption{Observed number-at-age of \fishName{} by sample type in \thisYr{} in the \regionName{} \regionType{} stock assessment region (SAR). 
+\caption{Observed number-at-age of \fishName{} by sample type in \thisYr{}
+in the \regionName{} \regionType{} stock assessment region (SAR). 
 \plusGroup{}
 \legendNear{}} 
 \begin{tabular}\Sexpr{ageTableAlign}
@@ -265,7 +320,8 @@ and DFO Science staff:
 
 \begin{table}[ht]
 \centering
-\caption{Observed proportion-at-age of \fishName{} by sample type in \thisYr{} in the \regionName{} \regionType{} stock assessment region (SAR). 
+\caption{Observed proportion-at-age of \fishName{} by sample type in \thisYr{}
+in the \regionName{} \regionType{} stock assessment region (SAR). 
 \plusGroup{}
 \legendNear{}} 
 \begin{tabular}\Sexpr{ageTableAlign}
@@ -279,7 +335,9 @@ and DFO Science staff:
 
 \begin{table}[ht]
 \centering
-\caption{Observed mean weight-at-age in grams (g) of \fishName{} by sample type in \thisYr{} in the \regionName{} \regionType{} stock assessment region (SAR). 
+\caption{Observed mean weight-at-age in grams (g) of \fishName{}
+by sample type in \thisYr{} in the \regionName{} \regionType{}
+stock assessment region (SAR). 
 \plusGroup{}
 \legendNear{}} 
 \begin{tabular}\Sexpr{ageTableAlign}
@@ -293,7 +351,9 @@ and DFO Science staff:
 
 \begin{table}[ht]
 \centering
-\caption{Observed mean length-at-age in millimetres (mm) of \fishName{} by sample type in \thisYr{} in the \regionName{} \regionType{} stock assessment region (SAR). \plusGroup{}
+\caption{Observed mean length-at-age in millimetres (mm) of \fishName{}
+by sample type in \thisYr{} in the \regionName{} \regionType{}
+stock assessment region (SAR). \plusGroup{}
 \legendNear{}} 
 \begin{tabular}\Sexpr{ageTableAlign}
 \toprule
@@ -338,8 +398,8 @@ in the \regionName{} \regionType{} stock assessment region (SAR).
 
 \begin{table}[ht]
 \centering
-\caption{Observed mean weight-at-age in grams (g) of \fishName{} for nearshore samples from
-\Sexpr{paste(range(yrsNearshore), collapse=" to ")}
+\caption{Observed mean weight-at-age in grams (g) of \fishName{} for
+nearshore samples from \Sexpr{paste(range(yrsNearshore), collapse=" to ")}
 in the \regionName{} \regionType{} stock assessment region (SAR). 
 \plusGroup{}
 \legendNear{}} 
@@ -354,8 +414,8 @@ in the \regionName{} \regionType{} stock assessment region (SAR).
 
 \begin{table}[ht]
 \centering
-\caption{Observed mean length-at-age in millimetres (mm) of \fishName{} for nearshore samples from 
-\Sexpr{paste(range(yrsNearshore), collapse=" to ")}
+\caption{Observed mean length-at-age in millimetres (mm) of \fishName{}
+for nearshore samples from \Sexpr{paste(range(yrsNearshore), collapse=" to ")}
 in the \regionName{} \regionType{} stock assessment region (SAR). 
 \plusGroup{}
 \legendNear{}} 
@@ -371,7 +431,9 @@ in the \regionName{} \regionType{} stock assessment region (SAR).
 
 \begin{table}[ht]
 \centering
-\caption{Observed proportion-at-age for \fishName{} from \Sexpr{firstYrTab} to \thisYr{} in the \regionName{} \regionType{} stock assessment region (SAR). 
+\caption{Observed proportion-at-age for \fishName{}
+from \Sexpr{firstYrTab} to \thisYr{} in the \regionName{} \regionType{}
+stock assessment region (SAR). 
 \plusGroup{}} 
 \begin{tabular}\Sexpr{ageTableAlign}
 \toprule
@@ -385,7 +447,11 @@ in the \regionName{} \regionType{} stock assessment region (SAR).
 \iftoggle{weightGroup}{
 \begin{table}[ht]
 \centering
-\caption{Sample size for \fishName{} weight-at-age analysis in \thisYr{} in the \regionName{} \regionType{} stock assessment region (SAR) by Group from the most recent decade (\Sexpr{wtAgeYrRanges$recent}), and the previous decade (\Sexpr{wtAgeYrRanges$previous}), as displayed in \autoref{figWeightAgeGroup}. 
+\caption{Sample size for \fishName{} weight-at-age analysis in \thisYr{}
+in the \regionName{} \regionType{} stock assessment region (SAR) by Group
+from the most recent decade (\Sexpr{wtAgeYrRanges$recent}), and
+the previous decade (\Sexpr{wtAgeYrRanges$previous}),
+as displayed in \autoref{figWeightAgeGroup}. 
 \seineSamples{}
 \plusGroup{}
 \Sexpr{spawnIndexGroupLegend}}
@@ -402,7 +468,10 @@ in the \regionName{} \regionType{} stock assessment region (SAR).
 \iftoggle{spawnByLoc}{
 \FloatBarrier
 \begin{longtable}{rrllr}
-\caption{\fishName{} spawn survey location\Sexpr{ifelse(nrow(spawnByLoc)>1, "s", "")}, start date, and spawn index in metric tonnes (t) in \thisYr{} in the \regionName{} \regionType{} stock assessment region (SAR).
+\caption{\fishName{} spawn survey
+location\Sexpr{ifelse(nrow(spawnByLoc)>1, "s", "")}, start date, and
+spawn index in metric tonnes (t) in \thisYr{}
+in the \regionName{} \regionType{} stock assessment region (SAR).
 \spawnIndex{}
 \missingSpawn{NAs}}\\
 \toprule
@@ -426,7 +495,9 @@ in the \regionName{} \regionType{} stock assessment region (SAR).
 
 \begin{table}[ht]
 \centering % \centerfloat
-\caption{Summary of \fishName{} spawn survey data from \Sexpr{firstYrTab} to \thisYr{} in the \regionName{} \regionType{} stock assessment region (SAR). 
+\caption{Summary of \fishName{} spawn survey data
+from \Sexpr{firstYrTab} to \thisYr{}
+in the \regionName{} \regionType{} stock assessment region (SAR). 
 \qPeriods{}
 \spawnIndex{}
 Units: metres (m), and metric tonnes (t).}
@@ -444,7 +515,8 @@ Units: metres (m), and metric tonnes (t).}
 \begin{figure}[ht]
 \centering
 \includegraphics[width=\linewidth]{BC.png}
-\caption{Boundaries for the \fishName{} stock assessment regions (SARs) in British Columbia.
+\caption{Boundaries for the \fishName{} stock assessment regions (SARs)
+in British Columbia.
 There are \Sexpr{length(allRegionsLong$major)} major SARs:
 \Sexpr{PasteNicely(allRegionsLong$major)}.
 There are \Sexpr{length(allRegionsLong$minor)} minor SARs:
@@ -456,7 +528,10 @@ Units: kilometres (km).}
 \begin{figure}[ht]
 \centering
 \includegraphics[width=\linewidth]{Region.png}
-\caption{Boundaries for the \regionName{} \regionType{} stock assessment region (SAR; thick dashed lines), associated Statistical Areas (SA; thin solid lines), and associated Sections (thin dotted lines).
+\caption{Boundaries for the \regionName{} \regionType{}
+stock assessment region (SAR; thick dashed lines),
+associated Statistical Areas (SA; thin solid lines), and
+associated Sections (thin dotted lines).
 Units: kilometres (km).
 \Sexpr{spawnIndexGroupLegend}}
 \label{figRegion}
@@ -465,7 +540,10 @@ Units: kilometres (km).
 \begin{figure}[ht]
 \centering
 \includegraphics[width=\linewidth]{CatchGear.png}
-\caption{Time series of total landed catch in thousands of metric tonnes ($\text{t} \times 10^{3}$) of \fishName{} by gear type from \Sexpr{min(yrRange)} to \thisYr{} in the \regionName{} \regionType{} stock assessment region (SAR).
+\caption{Time series of total landed catch in
+thousands of metric tonnes ($\text{t} \times 10^{3}$) of \fishName{} by
+gear type from \Sexpr{min(yrRange)} to \thisYr{} in the
+\regionName{} \regionType{} stock assessment region (SAR).
 \legendGear{}
 \noSOK{}
 \iftoggle{showCatchZoom}{Bottom panel shows catch since \Sexpr{firstYrFig} in more detail.}{\unskip}
@@ -488,7 +566,11 @@ Note: symbols indicate years in which catch is withheld due to privacy concerns.
 \begin{figure}[ht]
 \centering
 \includegraphics[width=\linewidth]{BioLocations.png}
-\caption{Location and type of \fishName{} biological samples collected in \thisYr{} in the \regionName{} \regionType{} stock assessment region (SAR; thick dashed lines), and associated Section\Sexpr{ifelse(length(unique(areas$Section))>1, "s", "")} (Sec; thin solid lines).
+\caption{Location and type of \fishName{} biological samples collected
+in \thisYr{} in the \regionName{} \regionType{}
+stock assessment region (SAR; thick dashed lines), and
+associated Section\Sexpr{ifelse(length(unique(areas$Section))>1, "s", "")}
+(Sec; thin solid lines).
 Units: kilometres (km).}
 \label{figBioLocations}
 \end{figure}
@@ -498,10 +580,18 @@ Units: kilometres (km).}
 \begin{figure}[ht]
 \centering
 \includegraphics[width=\linewidth]{WeightCatch.png}
-\caption{Time series of weight in grams (g) of \fishName{} by sample type from \Sexpr{firstYrTab} to \thisYr{} in the \regionName{} \regionType{} stock assessment region (SAR) in Statistical Areas 14 and 17.
-The outer edges of the boxes indicate the \nth{25} and \nth{75} percentiles, and the middle lines indicate the \nth{50} percentiles (i.e., medians).
-The whiskers extend to $1.5 \times \text{IQR}$, where IQR is the distance between the \nth{25} and \nth{75} percentiles, and dots indicate outliers.
-Horizontal dashed lines indicate the mean weight-at-age for age-\Sexpr{min(ageRange)} (lowest line) to age-\Sexpr{max(ageRange)} (incrementing higher from age-\Sexpr{min(ageRange)}) fish. 
+\caption{Time series of weight in grams (g) of \fishName{} by sample type
+from \Sexpr{firstYrTab} to \thisYr{}
+in the \regionName{} \regionType{} stock assessment region (SAR)
+in Statistical Areas 14 and 17.
+The outer edges of the boxes indicate the \nth{25} and \nth{75} percentiles,
+and the middle lines indicate the \nth{50} percentiles (i.e., medians).
+The whiskers extend to $1.5 \times \text{IQR}$,
+where IQR is the distance between the \nth{25} and \nth{75} percentiles, and
+dots indicate outliers.
+Horizontal dashed lines indicate the mean weight-at-age
+for age-\Sexpr{min(ageRange)} (lowest line) to age-\Sexpr{max(ageRange)}
+(incrementing higher from age-\Sexpr{min(ageRange)}) fish. 
 \seineSamples{}
 \plusGroup{}}
 \label{figWeightCatch}
@@ -511,8 +601,11 @@ Horizontal dashed lines indicate the mean weight-at-age for age-\Sexpr{min(ageRa
 \begin{figure}[ht]
 \centering
 \includegraphics[width=\linewidth]{ProportionAged.png}
-\caption{Time series of observed proportion-at-age (a) and number aged in thousands (b) of \fishName{} from \Sexpr{min(yrRange)} to \thisYr{} in the \regionName{} \regionType{} stock assessment region (SAR). 
-The black line is the mean age, and the shaded area is the approximate \Sexpr{ciLevel*100}\% distribution. 
+\caption{Time series of observed proportion-at-age (a) and
+number aged in thousands (b) of \fishName{}
+from \Sexpr{min(yrRange)} to \thisYr{} in the \regionName{} \regionType{} stock assessment region (SAR). 
+The black line is the mean age, and
+the shaded area is the approximate \Sexpr{ciLevel*100}\% distribution. 
 \seineSamples{}
 \plusGroup{}}
 \label{figProportionAged}
@@ -522,9 +615,22 @@ The black line is the mean age, and the shaded area is the approximate \Sexpr{ci
 \centering
 \includegraphics[width=\linewidth]{WtLenAge.png}
 \caption{\iftoggle{major}
-{Time series of weight-at-age in grams (g) and length-at-age in milimetres (mm) for age-\Sexpr{ageShow} (circles) and \Sexpr{nRoll}-year running mean weight- and length-at-age (lines) for \fishName{} from \Sexpr{min(yrRange)} to \thisYr{} in the \regionName{} \regionType{} stock assessment region (SAR). 
-Missing weight- and length-at-age values (i.e., years with no biological samples) are imputed using one of two methods: missing values at the beginning of the time series are imputed by extending the first non-missing value backwards; other missing values are imputed as the mean of the previous \Sexpr{nRoll} years.}
-{Time series of weight-at-age in grams (g) and length-at-age in milimetres (mm) for \fishName{} from \Sexpr{min(yrRange)} to \thisYr{} in the \regionName{} \regionType{} stock assessment region (SAR).
+{Time series of weight-at-age in grams (g) and
+length-at-age in milimetres (mm) for age-\Sexpr{ageShow} (circles) and
+\Sexpr{nRoll}-year running mean weight- and length-at-age (lines) for
+\fishName{} from \Sexpr{min(yrRange)} to \thisYr{}
+in the \regionName{} \regionType{} stock assessment region (SAR). 
+Missing weight- and length-at-age values
+(i.e., years with no biological samples)
+are imputed using one of two methods:
+missing values at the beginning of the time series are imputed by
+extending the first non-missing value backwards;
+other missing values are imputed as
+the mean of the previous \Sexpr{nRoll} years.}
+{Time series of weight-at-age in grams (g) and
+length-at-age in milimetres (mm) for \fishName{}
+from \Sexpr{min(yrRange)} to \thisYr{}
+in the \regionName{} \regionType{} stock assessment region (SAR).
 Age-\Sexpr{ageShow} fish are indicated by circles.}
 \seineSamples{}
 \plusGroup{}}
@@ -535,7 +641,10 @@ Age-\Sexpr{ageShow} fish are indicated by circles.}
 \begin{figure}[ht]
 \centering
 \includegraphics[width=\linewidth]{WtLenAgeChange.png}
-\caption{Time series of percent change (\%) in weight and length for age-\Sexpr{ageShow} fish for \fishName{} from \Sexpr{min(yrRange)} to \thisYr{} in the \regionName{} \regionType{} stock assessment region (SAR).
+\caption{Time series of percent change (\%) in weight and
+length for age-\Sexpr{ageShow} fish for \fishName{}
+from \Sexpr{min(yrRange)} to \thisYr{}
+in the \regionName{} \regionType{} stock assessment region (SAR).
 \pctChange{weight and length of age-\Sexpr{ageShow} fish, respectively,}
 \seineSamples{}}
 \label{figWtLenAgeChange}
@@ -546,7 +655,10 @@ Age-\Sexpr{ageShow} fish are indicated by circles.}
 \begin{figure}[ht]
 \centering
 \includegraphics[width=\linewidth]{WtLenAgeChange2.png}
-\caption{Time series of percent change (\%) in weight and length for age-\Sexpr{ageShow2} fish for \fishName{} from \Sexpr{min(yrRange)} to \thisYr{} in the \regionName{} \regionType{} stock assessment region (SAR).
+\caption{Time series of percent change (\%) in weight and length
+for age-\Sexpr{ageShow2} fish for \fishName{}
+from \Sexpr{min(yrRange)} to \thisYr{}
+in the \regionName{} \regionType{} stock assessment region (SAR).
 \pctChange{weight and length of age-\Sexpr{ageShow2} fish, respectively,}
 \seineSamples{}}
 \label{figWtLenAgeChange2}
@@ -560,8 +672,11 @@ Age-\Sexpr{ageShow} fish are indicated by circles.}
 \caption{Length-at-age in millimetres (mm) of \fishName{} from
 \Sexpr{paste(range(yrsNearshore), collapse=" to ")}
 in the \regionName{} \regionType{} stock assessment region (SAR) by sample type. 
-The outer edges of the boxes indicate the \nth{25} and \nth{75} percentiles, and the middle lines indicate the \nth{50} percentiles (i.e., medians).
-The whiskers extend to $1.5 \times \text{IQR}$, where IQR is the distance between the \nth{25} and \nth{75} percentiles, and dots indicate outliers.
+The outer edges of the boxes indicate the \nth{25} and \nth{75} percentiles,
+and the middle lines indicate the \nth{50} percentiles (i.e., medians).
+The whiskers extend to $1.5 \times \text{IQR}$,
+where IQR is the distance between the \nth{25} and \nth{75} percentiles, and
+dots indicate outliers.
 \seineSamples{}
 \legendNear{}
 \plusGroup{}}
@@ -573,9 +688,13 @@ The whiskers extend to $1.5 \times \text{IQR}$, where IQR is the distance betwee
 \includegraphics[width=\linewidth]{LengthAgeSampleSA.png}
 \caption{Length-at-age in millimetres (mm) of \fishName{} from
 \Sexpr{paste(range(yrsNearshore), collapse=" to ")}
-in the \regionName{} \regionType{} stock assessment region (SAR) by sample type and statistical area (SA). 
-The outer edges of the boxes indicate the \nth{25} and \nth{75} percentiles, and the middle lines indicate the \nth{50} percentiles (i.e., medians).
-The whiskers extend to $1.5 \times \text{IQR}$, where IQR is the distance between the \nth{25} and \nth{75} percentiles, and dots indicate outliers.
+in the \regionName{} \regionType{} stock assessment region (SAR)
+by sample type and statistical area (SA). 
+The outer edges of the boxes indicate the \nth{25} and \nth{75} percentiles,
+and the middle lines indicate the \nth{50} percentiles (i.e., medians).
+The whiskers extend to $1.5 \times \text{IQR}$,
+where IQR is the distance between the \nth{25} and \nth{75} percentiles,
+and dots indicate outliers.
 \seineSamples{}
 \legendNear{}
 \plusGroup{}}
@@ -587,9 +706,15 @@ The whiskers extend to $1.5 \times \text{IQR}$, where IQR is the distance betwee
 \begin{figure}[ht]
 \centering
 \includegraphics[width=\linewidth]{WeightAgeGroup.png}
-\caption{Weight-at-age in grams (g) of \fishName{} in the \regionName{} \regionType{} stock assessment region (SAR) by Group from the most recent decade (\Sexpr{wtAgeYrRanges$recent}), and the previous decade (\Sexpr{wtAgeYrRanges$previous}). 
-The outer edges of the boxes indicate the \nth{25} and \nth{75} percentiles, and the middle lines indicate the \nth{50} percentiles (i.e., medians).
-The whiskers extend to $1.5 \times \text{IQR}$, where IQR is the distance between the \nth{25} and \nth{75} percentiles, and dots indicate outliers.
+\caption{Weight-at-age in grams (g) of \fishName{}
+in the \regionName{} \regionType{} stock assessment region (SAR) by Group
+from the most recent decade (\Sexpr{wtAgeYrRanges$recent}), and
+the previous decade (\Sexpr{wtAgeYrRanges$previous}). 
+The outer edges of the boxes indicate the \nth{25} and \nth{75} percentiles,
+and the middle lines indicate the \nth{50} percentiles (i.e., medians).
+The whiskers extend to $1.5 \times \text{IQR}$,
+where IQR is the distance between the \nth{25} and \nth{75} percentiles,
+and dots indicate outliers.
 Sample sizes are given in \autoref{tabWeightAgeGroupN}.
 \seineSamples{}
 \plusGroup{}
@@ -603,7 +728,12 @@ Sample sizes are given in \autoref{tabWeightAgeGroupN}.
 \begin{figure}[ht]
 \centering
 \includegraphics[width=\linewidth]{SpawnByLoc.png}
-\caption{\fishName{} spawn survey location\Sexpr{ifelse(nrow(spawnByLoc)>1, "s", "")}, and spawn index in metric tonnes (t) in \thisYr{} in the \regionName{} \regionType{} stock assessment region (SAR; thick dashed lines), and associated Section\Sexpr{ifelse(length(unique(areas$Section))>1, "s", "")} (Sec; thin solid lines).
+\caption{\fishName{} spawn survey
+location\Sexpr{ifelse(nrow(spawnByLoc)>1, "s", "")}, and spawn index
+in metric tonnes (t) in \thisYr{} in the \regionName{} \regionType{}
+stock assessment region (SAR; thick dashed lines), and
+associated Section\Sexpr{ifelse(length(unique(areas$Section))>1, "s", "")}
+(Sec; thin solid lines).
 \spawnIndex{}
 \missingSpawn{grey circles}
 Units: kilometres (km).}
@@ -615,7 +745,14 @@ Units: kilometres (km).}
 \begin{figure}[ht]
 \centering
 \includegraphics[width=\linewidth]{SpawnDecade.png}
-\caption{\fishName{} spawn survey location\Sexpr{ifelse(nrow(spawnByLoc)>1, "s", "")}, mean spawn index in metric tonnes (t), and spawn frequency from \Sexpr{unique(spawnDecade$Decade)} in the \regionName{} \regionType{} stock assessment region (SAR; thick dashed lines), and associated Section\Sexpr{ifelse(length(unique(areas$Section))>1, "s", "")} (Sec; thin solid lines).
+\caption{\fishName{} spawn survey
+location\Sexpr{ifelse(nrow(spawnByLoc)>1, "s", "")},
+mean spawn index in metric tonnes (t), and
+spawn frequency from \Sexpr{unique(spawnDecade$Decade)}
+in the \regionName{} \regionType{} stock assessment region
+(SAR; thick dashed lines), and associated
+Section\Sexpr{ifelse(length(unique(areas$Section))>1, "s", "")}
+(Sec; thin solid lines).
 \spawnIndex{}
 \missingSpawn{grey circles}
 %Note that the mean excludes years when no spawn was reported.
@@ -626,9 +763,12 @@ Units: kilometres (km).}
 \begin{figure}[ht]
 \centering
 \includegraphics[width=\linewidth]{SpawnTiming.png}
-\caption{\fishName{} spawn start date by decade and \Sexpr{ifelse(spawnTimingGroup, "Group", "Statistical Area")}.
+\caption{\fishName{} spawn start date by decade and
+\Sexpr{ifelse(spawnTimingGroup, "Group", "Statistical Area")}.
 Grey shaded regions indicate March \nth{1} to \nth{31}.
-Note that spawn size and intensity varies; therefore the number of spawns is not directly proportional to spawn extent or biomass.
+Note that spawn size and intensity varies;
+therefore the number of spawns is not directly proportional to
+spawn extent or biomass.
 \Sexpr{ifelse(spawnTimingGroup, spawnIndexGroupLegend, "")}}
 \label{figSpawnTiming}
 \end{figure}
@@ -636,7 +776,10 @@ Note that spawn size and intensity varies; therefore the number of spawns is not
 \begin{figure}[ht]
 \centering
 \includegraphics[width=\linewidth]{SpawnIndexType.png}
-\caption{Time series of spawn index in thousands of metric tonnes ($\text{t} \times 10^{3}$) by type for \fishName{} from \Sexpr{min(yrRange)} to \thisYr{} in the \regionName{} \regionType{} stock assessment region (SAR). 
+\caption{Time series of spawn index in thousands of metric tonnes
+($\text{t} \times 10^{3}$) by type for \fishName{}
+from \Sexpr{min(yrRange)} to \thisYr{}
+in the \regionName{} \regionType{} stock assessment region (SAR). 
 %\trendLine{}
 \spawnTypes{}
 \qPeriods{}}
@@ -646,7 +789,9 @@ Note that spawn size and intensity varies; therefore the number of spawns is not
 \begin{figure}[ht]
 \centering
 \includegraphics[width=\linewidth]{SpawnTypeProp.png}
-\caption{Time series of proportion of spawn index by surface and dive surveys for \fishName{} from \Sexpr{min(yrRange)} to \thisYr{} in the \regionName{} \regionType{} stock assessment region (SAR). 
+\caption{Time series of proportion of spawn index by surface and dive surveys
+for \fishName{} from \Sexpr{min(yrRange)} to \thisYr{}
+in the \regionName{} \regionType{} stock assessment region (SAR). 
 \qPeriods{}}
 \label{figSpawnTypeProp}
 \end{figure}
@@ -654,7 +799,12 @@ Note that spawn size and intensity varies; therefore the number of spawns is not
 \begin{figure}[ht]
 \centering
 \includegraphics[width=\linewidth]{SpawnDimensions.png}
-\caption{Time series of total spawn length in thousands of metres ($\text{m} \times 10^{3}$; panel a), mean spawn width in metres (b), and mean number of egg layers (c) for \fishName{} from \Sexpr{min(yrRange)} to \thisYr{} in the \regionName{} \regionType{} stock assessment region (SAR). 
+\caption{Time series of total spawn length in thousands of metres
+($\text{m} \times 10^{3}$; panel a),
+mean spawn width in metres (b), and
+mean number of egg layers (c) for \fishName{}
+from \Sexpr{min(yrRange)} to \thisYr{}
+in the \regionName{} \regionType{} stock assessment region (SAR). 
 %\trendLine{}
 \qPeriods{}}
 \label{figSpawnDimensions}
@@ -663,7 +813,12 @@ Note that spawn size and intensity varies; therefore the number of spawns is not
 \begin{figure}[ht]
 \centering
 \includegraphics[width=\linewidth]{SpawnIndexPercent.png}
-\caption{Time series of spawn index in thousands of metric tonnes ($\text{t} \times 10^{3}$) for \fishName{} from \Sexpr{min(yrRange)} to \thisYr{} in the \regionName{} \regionType{} stock assessment region (SAR; panel a), as well as percent contributed by \Sexpr{spawnIndexGroupName$b}, and Section (b, \& c, respectively). 
+\caption{Time series of spawn index in thousands of metric tonnes
+($\text{t} \times 10^{3}$) for \fishName{}
+from \Sexpr{min(yrRange)} to \thisYr{}
+in the \regionName{} \regionType{} stock assessment region (SAR; panel a),
+as well as percent contributed by \Sexpr{spawnIndexGroupName$b},
+and Section (b, \& c, respectively). 
 %\trendLine{}
 \qPeriods{}
 \spawnSurfDive{}
@@ -675,7 +830,11 @@ Note that spawn size and intensity varies; therefore the number of spawns is not
 \begin{figure}[ht]
 \centering
 \includegraphics[width=\linewidth]{SpawnIndexChange.png}
-\caption{Time series of spawn index in thousands of metric tonnes ($\text{t} \times 10^{3}$) for \fishName{} from \Sexpr{min(yrRange)} to \thisYr{} in the \regionName{} \regionType{} stock assessment region (SAR; panel a), and percent change (b).
+\caption{Time series of spawn index in thousands of metric tonnes
+($\text{t} \times 10^{3}$) for \fishName{}
+from \Sexpr{min(yrRange)} to \thisYr{}
+in the \regionName{} \regionType{} stock assessment region (SAR; panel a), and
+percent change (b).
 \pctChange{spawn index}
 %\trendLine{}
 \qPeriods{}
@@ -688,7 +847,10 @@ Note that spawn size and intensity varies; therefore the number of spawns is not
 \begin{figure}[ht]
 \centering
 \includegraphics[width=\linewidth]{SpawnDepthSASec.png}
-\caption{Time series of maximum spawn depth in metres (m) for \fishName{} from \Sexpr{firstYrFig} to \thisYr{} in the \regionName{} \regionType{} stock assessment region (SAR) by Statistical Area (SA; panel a), and Section (b).
+\caption{Time series of maximum spawn depth in metres (m)
+for \fishName{} from \Sexpr{firstYrFig} to \thisYr{}
+in the \regionName{} \regionType{} stock assessment region (SAR)
+by Statistical Area (SA; panel a), and Section (b).
 Note that depth is not corrected to chart datum.
 \qPeriods{}}
 \label{figSpawnDepth}
@@ -698,7 +860,9 @@ Note that depth is not corrected to chart datum.
 \begin{figure}[ht]
 \centering
 \includegraphics[width=\linewidth]{SpawnPercentPanel.png}
-\caption{Time series of percent of spawn index by Section for \fishName{} from \Sexpr{min(yrRange)} to \thisYr{} in the \regionName{} \regionType{} stock assessment region (SAR). 
+\caption{Time series of percent of spawn index by Section for
+\fishName{} from \Sexpr{min(yrRange)} to \thisYr{}
+in the \regionName{} \regionType{} stock assessment region (SAR). 
 \darkThisYr{}
 \qPeriods{}
 \spawnIndex{}}
@@ -708,7 +872,9 @@ Note that depth is not corrected to chart datum.
 \begin{figure}[ht]
 \centering
 \includegraphics[width=\linewidth]{SpawnPercentGrid.png}
-\caption{Time series of percent of spawn index by \Sexpr{spawnIndexGroupName$b} and Section for \fishName{} from \Sexpr{min(yrRange)} to \thisYr{} in the \regionName{} \regionType{} stock assessment region (SAR). 
+\caption{Time series of percent of spawn index by \Sexpr{spawnIndexGroupName$b}
+and Section for \fishName{} from \Sexpr{min(yrRange)} to \thisYr{}
+in the \regionName{} \regionType{} stock assessment region (SAR). 
 \qPeriods{}
 \spawnIndex{}
 \Sexpr{spawnIndexGroupLegend}}
@@ -718,7 +884,12 @@ Note that depth is not corrected to chart datum.
 \begin{figure}[ht]
 \centering
 \animategraphics[width=\linewidth]{1}{\Sexpr{rPath}SpawnIndexAnimation}{0}{}
-\caption{Animation of \fishName{} spawn index in metric tonnes (t) by Location from \Sexpr{min(yrRange)} to \thisYr{} in the \regionName{} \regionType{} stock assessment region (SAR; thick dashed lines), and associated Section\Sexpr{ifelse(length(unique(areas$Section))>1, "s", "")} (Sec; thin solid lines).
+\caption{Animation of \fishName{} spawn index in metric tonnes (t) by Location
+from \Sexpr{min(yrRange)} to \thisYr{}
+in the \regionName{} \regionType{} stock assessment region
+(SAR; thick dashed lines), and
+associated Section\Sexpr{ifelse(length(unique(areas$Section))>1, "s", "")}
+(Sec; thin solid lines).
 \qPeriods{}
 \spawnIndex{}
 \missingSpawn{grey circles}
