--- a/RegionalText/2024/SoG/FirstNationsObservations.tex
+++ b/RegionalText/2024/SoG/FirstNationsObservations.tex
@@ -2,7 +2,7 @@
 
 Weather delayed the trip to Bute Inlet.
 Cruised the East shoreline from Alpha Bluff to Bear River
-on Tuesday March \nth{12}th but no definitively white milt in water and
+on Tuesday March \nth{12} but no definitively white milt in water and
 no herring predators observed.
 Found the small spawn (about 170m) reported by Bute Inlet Resort
 on March \nth{8} on either side of their dock, but
@@ -107,4 +107,4 @@ A few crew members got off the boat to check the beach for eggs
 but none were observed. 
 Seems that there was a higher ratio of males in the mix.
 The Nation was unable to get any herring or roe
-from Area 15 this year despite multiple efforts
+from Area 15 this year despite multiple efforts.
